--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "csvkit>=2.1.0",
+    "deepdiff>=8.4.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.1",
     "pandas>=2.2.3",
+    "playwright>=1.51.0",
+    "requests>=2.32.3",
 ]
