--- a/.github/workflows/verra-sync.yml
+++ b/.github/workflows/verra-sync.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install dependencies
       run: uv sync
 
+    - name: Install Playwright browsers
+      run: uv run playwright install
+
     - name: Run download + diff script
       run: |
         mkdir -p logs
