--- a/.github/workflows/verra-sync.yml
+++ b/.github/workflows/verra-sync.yml
@@ -37,10 +37,10 @@ jobs:
         cat $LOG_FILE > latest_log.txt
 
     - name: Create GitHub Issue
-      uses: peter-evans/create-issue@v3
+      uses: peter-evans/create-issue-from-file@v5
       with:
         title: "Verra Registry Update ${{ github.run_number }}"
-        body-file: latest_log.txt
+        content-filepath: latest_log.txt
         token: ${{ secrets.GH_TOKEN }}
         labels: |
           automated
