--- a/.github/workflows/verra-sync.yml
+++ b/.github/workflows/verra-sync.yml
@@ -45,3 +45,11 @@ jobs:
         labels: |
           automated
           verra-update
+
+    - name: Commit and push if there are changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add data/archive/* data/latest.csv logs/*
+        git commit -m "Update Verra Registry data [skip ci]" || exit 0
+        git push
