--- a/.github/workflows/verra-sync.yml
+++ b/.github/workflows/verra-sync.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 9 * * 3'  # Every Wednesday at 9am UTC
   workflow_dispatch:
 
+permissions:
+  contents: write
+  issues: write
+
 jobs:
   verra-sync:
     runs-on: ubuntu-latest
@@ -12,6 +16,9 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+        fetch-depth: 0
 
     - name: Install uv
       run: |
@@ -46,10 +53,9 @@ jobs:
           automated
           verra-update
 
-    - name: Commit and push if there are changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add data/archive/* data/latest.csv logs/*
-        git commit -m "Update Verra Registry data [skip ci]" || exit 0
-        git push
+    - name: Commit & Push changes
+      uses: actions-js/push@master
+      with:
+        github_token: ${{ secrets.GH_TOKEN }}
+        message: 'Update Verra Registry data [skip ci]'
+        branch: main
